// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grommet announces 1`] = `
<div
  class="StyledGrommet-gGRXwz jUezAj"
>
  <div>
    hi
  </div>
</div>
`;

exports[`Grommet announces 2`] = `
<div
  style="left: -100%; right: 100%; position: fixed; z-index: -1;"
  aria-live="assertive"
>
  hello
</div>
`;

exports[`Grommet announces 3`] = `
<div
  style="left: -100%; right: 100%; position: fixed; z-index: -1;"
  aria-live="assertive"
/>
`;

exports[`Grommet hpe theme renders 1`] = `
.c0 {
  font-family: 'Metric',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 * {
  box-sizing: inherit;
}

<div
  className="c0"
>
  Grommet App
</div>
`;

exports[`Grommet renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c0 * {
  box-sizing: inherit;
}

<div
  className="c0"
/>
`;
